--- a/source/index.html
+++ b/source/index.html
@@ -110,6 +110,7 @@
           <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
             Отличный результат без изнуряющих тренировок!
             При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+            <div class="example__container">
             <ul class="example__list">
               <li class="example__item">
                 <b class="example__item-title">5 КГ</b>
@@ -121,6 +122,7 @@
               </li>
             </ul>
             <span class="example__cost">Затраты на питание: 15 000 РУБ.</span>
+          </div>
             <div class="example__image-slider slider">
               <img class="slider__image" src="img/cat-before-mobile.png" width="280" height="256" alt="Фото До">
               <img class="slider__image" src="img/cat-after-mobile.png" width="280" height="256" alt="Фото После">
@@ -133,10 +135,12 @@
     </main>
     <footer class="main-footer">
         <div class="main-footer__contacts contacts">
+          <div class="contacts__text">
           <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
           <p class="contacts__address">ул. Большая
             Конюшенная, д. 19/8<br>
             Санкт-Петербург</p>
+          </div>
           <img class="contacts__map" src="img/map-mobile.jpg" alt="Карта Петербурга">
         </div>
         <div class="main-footer__wrapper">
