--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
-    <link href="css/style.min.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
@@ -59,17 +59,20 @@
         <line y1="6" x2="18" y2="6" stroke="black" stroke-width="2"/>
         <path d="M24 6L17.25 11.1962L17.25 0.803848L24 6Z" fill="black"/>
       </symbol>
+      <symbol viewBox="0 0 27 34" id="html-academy">
+        <path d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z" fill="#666666"/>
+      </symbol>
     </svg>
     <header class="main-header main-header__catalog">
       <div class="main-header__logo">
-        <a class="main-header__logo-image">
+        <a class="main-header__logo-image" href="index.html">
           <picture>
             <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg" >
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" >
             <img class="header__logo-image" src="img/logo-mobile.svg" alt="Cat Energy.">
           </picture>
         </a>
-      <a class="main-header__logo-text">
+      <a class="main-header__logo-text" href="index.html">
         <svg width="101" height="18" viewBox="0 0 101 18">
           <use xlink:href="#logo-text"></use>
         </svg>
@@ -352,7 +355,7 @@
           </li>
         </ul>
         <div class="additional__gift">
-          <svg class="additional__icon" width="78" height="80" viewBox="0 0 78 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="additional__icon" width="78" height="80" viewBox="0 0 78 80" fill="none" xmlns="http://www.w3.org/2000/svg" loading="lazy">
             <path d="M64.0156 34.7127H14.031C12.2766 34.7127 10.8494 33.2951 10.8494 31.5524V22.0842C10.8494 20.3415 12.2766 18.9233 14.031 18.9233H64.0149C65.7687 18.9233 67.1953 20.3415 67.1953 22.0842V31.553C67.1959 33.2951 65.7693 34.7127 64.0156 34.7127ZM14.031 21.3455C13.6276 21.3455 13.2869 21.684 13.2869 22.0842V31.553C13.2869 31.9599 13.6208 32.2912 14.031 32.2912H64.0149C64.4244 32.2912 64.7578 31.9599 64.7578 31.553V22.0842C64.7578 21.6834 64.4171 21.3455 64.0149 21.3455H14.031Z" fill="white"/>
             <path d="M57.0447 67.1488H20.999C17.6218 67.1488 14.8741 64.4191 14.8741 61.0626V33.5016C14.8741 32.8331 15.4201 32.2905 16.0929 32.2905C16.7656 32.2905 17.3116 32.8331 17.3116 33.5016V61.0626C17.3116 63.0833 18.9661 64.7267 20.999 64.7267H57.0447C59.077 64.7267 60.7308 63.0833 60.7308 61.0626V33.5016C60.7308 32.8331 61.2768 32.2905 61.9496 32.2905C62.6223 32.2905 63.1683 32.8331 63.1683 33.5016V61.0626C63.1683 64.4191 60.4213 67.1488 57.0447 67.1488Z" fill="white"/>
             <path d="M39.0225 67.1488C38.3498 67.1488 37.8038 66.6069 37.8038 65.9378V33.5016C37.8038 32.8331 38.3498 32.2905 39.0225 32.2905C39.6953 32.2905 40.2413 32.8331 40.2413 33.5016V65.9372C40.2413 66.6069 39.6959 67.1488 39.0225 67.1488Z" fill="white"/>
@@ -378,24 +381,24 @@
       </div>
       <div class="main-footer__wrapper">
       <a class="main-footer__logo logo" href="#">
-        <img class="main-footer__logo-text" src="img/footer-logo.svg" width="101" height="18" alt="Логотип Cat energy.">
+        <img class="main-footer__logo-text" src="img/footer-logo.svg" width="101" height="18" alt="Логотип Cat energy." loading="lazy">
       </a>
       <span class="main-footer__underline"></span>
     <div class="main-footer__social social">
       <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-        <svg width="29" height="22">
+        <svg width="29" height="22" loading="lazy">
           <use xlink:href="#vk"></use>
           </svg>
         <span class="visually-hidden">Вконтакте.</span>
       </a>
       <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-        <svg width="29" height="22">
+        <svg width="29" height="22" loading="lazy">
           <use xlink:href="#youtube"></use>
         </svg>
         <span class="visually-hidden">Youtube.</span>
       </a>
       <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-        <svg width="29" height="22">
+        <svg width="29" height="22" loading="lazy">
           <use xlink:href="#telegram"></use>
           </svg>
         <span class="visually-hidden">Телеграм.</span>
@@ -403,9 +406,11 @@
     </div>
     <span class="main-footer__underline"></span>
     <div class="main-footer__copyright copyright">
-      <span class="copyright__text">HTML Academy</span>
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-        <img class="copyright__image" src="img/html-academy.svg" alt="html-academy">
+        <span class="copyright__text">HTML Academy</span>
+        <svg width="27" height="34" loading="lazy">
+          <use xlink:href="#html-academy"></use>
+        </svg>
         <span class="visually-hidden">Ссылка на академию</span>
       </a>
     </div>
