--- a/source/form.html
+++ b/source/form.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
-    <link href="css/style.min.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
@@ -65,17 +65,20 @@
       <symbol viewBox="0 0 20 20" id="phone" fill="none">
         <path d="M10 10H18.5M18.5 10L16 7.5M18.5 10L16 12.5M8.5 2.5V7.5H5.5V12.5H8.5V17.5H6C4.5 17.5 3.5 16.5 3.5 15V5C3.5 3.5 4.5 2.5 6 2.5H8.5Z" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
       </symbol>
+      <symbol viewBox="0 0 27 34" id="html-academy">
+        <path d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z" fill="#666666"/>
+      </symbol>
     </svg>
     <header class="main-header main-header__form">
       <div class="main-header__logo">
-        <a class="main-header__logo-image">
+        <a class="main-header__logo-image" href="index.html">
           <picture>
             <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg" >
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" >
             <img class="header__logo-image" src="img/logo-mobile.svg" alt="Cat Energy.">
           </picture>
         </a>
-      <a class="main-header__logo-text">
+      <a class="main-header__logo-text" href="index.html">
         <svg width="101" height="18" viewBox="0 0 101 18">
           <use xlink:href="#logo-text"></use>
         </svg>
@@ -125,15 +128,15 @@
           <fieldset class="form__group">
             <ul class="form__list form__list-radio">
               <li class="form__item">
-                  <input class="form__input" type="radio" name="programm" id="loss" value="loss" checked>
+                  <input class="form__input visually-hidden" type="radio" name="programm" id="loss" value="loss" checked>
                   <label class="form__value form__radio" for="loss">Похудение</label>
               </li>
               <li class="form__item">
-                  <input class="form__input" type="radio" name="programm" value="gain" id="gain">
+                  <input class="form__input visually-hidden" type="radio" name="programm" value="gain" id="gain">
                   <label class="form__value form__radio" for="gain">Набор массы</label>
               </li>
               <li class="form__item">
-                  <input class="form__input" type="radio" name="programm" value="need advice" id="advice">
+                  <input class="form__input visually-hidden" type="radio" name="programm" value="need advice" id="advice">
                   <label class="form__value form__radio" for="advice">Не знаю (Нужен ваш совет)</label>
               </li>
             </ul>
@@ -166,19 +169,19 @@
             <h2 class="form__title form__title-additionally">Дополнительно</h2>
             <ul class="form__list additionally">
               <li class="form__item">
-                  <input class="form__input" type="checkbox" name="programm" id="sugar" value="loss" checked>
+                  <input class="form__input visually-hidden" type="checkbox" name="programm" id="sugar" value="loss" checked>
                   <label class="form__value form__checkbox" for="sugar">сахарозаменитель</label>
               </li>
               <li class="form__item">
-                <input class="form__input" type="checkbox" name="programm" id="water" value="loss" >
+                <input class="form__input visually-hidden" type="checkbox" name="programm" id="water" value="loss" >
                 <label class="form__value form__checkbox" for="water">питьевая вода</label>
             </li>
               <li class="form__item">
-                  <input class="form__input" type="checkbox" name="programm" value="gain" id="milk">
+                  <input class="form__input visually-hidden" type="checkbox" name="programm" value="gain" id="milk">
                   <label class="form__value form__checkbox" for="milk">молоко</label>
               </li>
               <li class="form__item">
-                  <input class="form__input" type="checkbox" name="programm" value="need advice" id="vitamins">
+                  <input class="form__input visually-hidden" type="checkbox" name="programm" value="need advice" id="vitamins">
                   <label class="form__value form__checkbox" for="vitamins">витамины</label>
               </li>
             </ul>
@@ -208,19 +211,19 @@
       <span class="main-footer__underline"></span>
     <div class="main-footer__social social">
       <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-        <svg width="29" height="22">
+        <svg width="29" height="22" loading="lazy">
           <use xlink:href="#vk"></use>
           </svg>
         <span class="visually-hidden">Вконтакте.</span>
       </a>
       <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-        <svg width="29" height="22">
+        <svg width="29" height="22" loading="lazy">
           <use xlink:href="#youtube"></use>
         </svg>
         <span class="visually-hidden">Youtube.</span>
       </a>
       <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-        <svg width="29" height="22">
+        <svg width="29" height="22" loading="lazy">
           <use xlink:href="#telegram"></use>
           </svg>
         <span class="visually-hidden">Телеграм.</span>
@@ -228,9 +231,11 @@
     </div>
     <span class="main-footer__underline"></span>
     <div class="main-footer__copyright copyright">
-      <span class="copyright__text">HTML Academy</span>
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-        <img class="copyright__image" src="img/html-academy.svg" alt="html-academy">
+        <span class="copyright__text">HTML Academy</span>
+        <svg width="27" height="34" loading="lazy">
+          <use xlink:href="#html-academy"></use>
+        </svg>
         <span class="visually-hidden">Ссылка на академию</span>
       </a>
     </div>
