--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
-    <link href="css/style.min.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
@@ -59,17 +59,20 @@
         <line y1="6" x2="18" y2="6" stroke="black" stroke-width="2"/>
         <path d="M24 6L17.25 11.1962L17.25 0.803848L24 6Z" fill="black"/>
       </symbol>
+      <symbol viewBox="0 0 27 34" id="html-academy">
+        <path d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z" fill="#666666"/>
+      </symbol>
     </svg>
     <header class="main-header">
       <div class="main-header__logo">
-      <a class="main-header__logo-image">
+      <a class="main-header__logo-image" href="index.html">
         <picture>
           <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg" >
           <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" >
           <img class="header__logo-image" src="img/logo-mobile.svg" alt="Cat Energy.">
         </picture>
       </a>
-      <a class="main-header__logo-text">
+      <a class="main-header__logo-text" href="index.html">
         <svg width="101" height="18" viewBox="0 0 101 18">
           <use xlink:href="#logo-text"></use>
         </svg>
@@ -157,7 +160,7 @@
           </h2>
           <ul class="advantages__list">
             <li class="advantages__item advantages__item-1">
-              <svg class="advantages__item-image" viewBox="0 0 61 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="advantages__item-image" viewBox="0 0 61 60" loading="lazy" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect width="60" height="60"  x="0.5" fill="#68B738"/>
                 <g clip-path="url(#clip0_95_18)">
                 <path d="M43.3438 16.767C43.2434 16.317 42.8647 16 42.4325 16C42.4306 16 42.4288 16 42.4269 16C37.4891 16.033 25.4816 16.916 20.6337 24.38C18.1156 28.258 17.8991 33.293 19.9897 39.345C20.0056 39.392 20.0384 39.424 20.06 39.467C19.3128 41.44 19.0231 42.753 19.0156 42.79C18.9069 43.33 19.2303 43.862 19.7366 43.978C19.8022 43.993 19.8678 44 19.9334 44C20.3656 44 20.7547 43.679 20.8494 43.21C20.8691 43.108 23.2578 32.837 31.7028 26.832C32.1341 26.526 32.2503 25.905 31.9625 25.445C31.6747 24.985 31.0934 24.86 30.6622 25.168C25.8734 28.573 22.9241 33.176 21.1897 36.824C19.9484 32.246 20.2737 28.447 22.1759 25.519C25.9194 19.755 34.7984 18.365 40.1581 18.071C39.005 19.872 37.745 23.174 37.745 29C37.745 32.12 36.9153 34.522 35.2803 36.14C32.6591 38.731 28.4009 38.974 25.2866 38.724C24.7691 38.679 24.32 39.095 24.2806 39.646C24.2412 40.196 24.6284 40.676 25.1441 40.718C25.7675 40.769 26.4331 40.8 27.125 40.8C30.2956 40.8 33.9941 40.137 36.5544 37.606C38.5888 35.595 39.62 32.7 39.62 29.001C39.62 19.902 42.8356 17.905 42.8516 17.896C43.2416 17.687 43.4459 17.219 43.3438 16.767Z" fill="white"/>
@@ -171,14 +174,14 @@
               <p class="advantages__description">Функциональное питание содержит только полезные питательные вещества.</p>
             </li>
             <li class="advantages__item advantages__item-2">
-              <svg class="advantages__item-image" viewBox="0 0 61 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="advantages__item-image" viewBox="0 0 61 60" loading="lazy" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect width="60" height="60"  x="0.5" fill="#68B738"/>
                 <path d="M28.875 16C27.2437 16 25.975 17.3594 25.975 19.0812C25.975 20.8031 27.2437 22.1625 28.875 22.1625C30.5063 22.1625 31.775 20.8031 31.775 19.0812C31.775 17.3594 30.5063 16 28.875 16ZM28.875 17.1781C29.8719 17.1781 30.5969 18.0209 30.5969 19.0812C30.5969 20.0781 29.8084 20.9844 28.875 20.9844C27.8781 20.9844 27.1531 20.1416 27.1531 19.0812C27.1531 18.0844 27.9325 17.1781 28.875 17.1781ZM18 40.7406C18 41.9188 18.4078 42.9156 19.3594 43.7313C20.3563 44.5831 21.5344 44.5106 21.5344 44.5106H40.5656C41.345 44.5106 42.3781 44.13 43.1937 43.0606C44.0366 42.0638 43.9822 40.7044 43.9822 40.7044V23.4856C43.9822 23.0506 43.8734 22.8875 43.2391 22.8875C42.6047 22.8875 42.5503 23.1594 42.5503 23.4766V40.6953C42.5322 40.9944 42.4778 41.7828 41.8072 42.4172C41.0731 43.0425 40.3572 42.9609 40.3572 42.9609C40.3572 42.9609 22.2322 42.9609 21.3259 42.9338C20.9816 42.8703 20.4197 42.7434 19.8759 42.0275C19.3684 41.3025 19.4681 40.3962 19.4681 40.3962V23.1775C19.4681 22.7153 19.2325 22.5431 18.7431 22.5431C18.2538 22.5431 18 22.7153 18 23.1231V40.7406ZM34.3125 24.4281C33.225 24.6637 32.1375 24.8088 30.0531 26.7844C27.9688 28.7781 26.4281 28.6875 24.8875 28.5969C23.3469 28.5063 21.7156 27.0563 21.4438 26.6938C21.1084 26.3403 20.5375 26.5759 20.3562 26.8116C20.2022 27.0472 20.2022 27.455 20.465 27.8084C21.7338 28.9866 22.9119 29.8928 25.1775 30.0741C27.4431 30.2916 29.6181 29.2675 31.0681 27.8084C32.5181 26.3584 33.2431 26.0866 34.3306 25.9053C36.9587 25.4884 38.4994 26.5216 39.4056 27.1741C40.4025 28.2616 40.6744 27.9534 40.9462 27.6453C41.49 26.9294 40.7197 26.3766 39.8588 25.7422C38.0463 24.5641 36.3244 24.1109 34.3306 24.4734L34.3125 24.4281ZM25.25 31.5875C24.0719 31.5875 23.1656 32.5844 23.1656 33.8531C23.1656 35.1219 24.0719 36.1188 25.25 36.1188C26.4281 36.1188 27.3344 35.1219 27.3344 33.8531C27.3344 32.5844 26.4281 31.5875 25.25 31.5875ZM37.0312 32.3669C35.4906 32.3669 34.2219 33.7262 34.2219 35.3575C34.2219 36.9888 35.4906 38.3481 37.0312 38.3481C38.5719 38.3481 39.8406 36.9888 39.8406 35.3575C39.8406 33.7262 38.5719 32.3669 37.0312 32.3669ZM37.0312 33.8169C37.8288 33.8169 38.4813 34.5147 38.4813 35.3575C38.4813 36.2184 37.8288 36.8981 37.0312 36.8981C36.2337 36.8981 35.5812 36.2003 35.5812 35.3575C35.5812 34.4966 36.2337 33.8169 37.0312 33.8169Z" fill="white"/>
                 </svg>
               <p class="advantages__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
             </li>
             <li class="advantages__item advantages__item-3">
-              <svg class="advantages__item-image" viewBox="0 0 61 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="advantages__item-image" viewBox="0 0 61 60" loading="lazy" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect class="advantages__item-image" width="60" height="60"  x="0.5" fill="#68B738"/>
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M36.6173 15.0761C36.991 14.9214 37.4211 15.0069 37.7071 15.2929C38.6156 16.2014 39.8038 18.1706 40.7659 21.2108C41.7373 24.2804 42.5 28.5081 42.5 34C42.5 34.5523 42.0523 35 41.5 35H38V44C38 44.5523 37.5523 45 37 45C36.4477 45 36 44.5523 36 44V16C36 15.5956 36.2436 15.2309 36.6173 15.0761ZM38 33H40.4912C40.4053 28.1836 39.7051 24.4875 38.8591 21.8142C38.5807 20.9346 38.2885 20.1715 38 19.519V33Z" fill="white"/>
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M24 15C24.5523 15 25 15.4477 25 16V44C25 44.5523 24.5523 45 24 45C23.4477 45 23 44.5523 23 44V16C23 15.4477 23.4477 15 24 15Z" fill="white"/>
@@ -188,7 +191,7 @@
               <p class="advantages__description">Замените один-два приема обычной еды на наше функциональное питание.</p>
             </li>
             <li class="advantages__item advantages__item-4">
-              <svg class="advantages__item-image" viewBox="0 0 61 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="advantages__item-image" viewBox="0 0 61 60" loading="lazy" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect width="60" height="60"  x="0.5" fill="#68B738"/>
                 <path d="M23.538 15C22.475 15 22.475 16.5831 23.538 16.5831H30.1815V18.1873C23.3786 18.62 18 24.4142 18 31.4854C18 35.4959 19.7432 39.1159 22.4963 41.5539C22.9746 41.976 23.0384 42.7254 22.6026 43.1897L21.0719 44.7412C20.3279 45.4272 21.4333 46.4931 22.103 45.7438L24.1014 43.7069C24.4521 43.3692 24.973 43.2847 25.4088 43.4958C27.1274 44.3397 29.0169 44.784 30.9341 44.795C32.8513 44.8059 34.7459 44.3833 36.4742 43.5591C36.8993 43.348 37.4308 43.4325 37.771 43.7702L39.7055 45.7438C40.3858 46.377 41.3638 45.4272 40.7472 44.7412L39.3016 43.2636C38.8552 42.8098 38.919 42.0605 39.4079 41.6277C40.8584 40.3585 42.0186 38.7959 42.8106 37.0447C43.6026 35.2936 44.0081 33.3944 43.9999 31.4748C43.9999 24.4036 38.5894 18.5989 31.7759 18.1873V16.5831H38.4194C39.4823 16.5831 39.4823 15 38.4194 15H23.538ZM19.435 31.4748C19.435 24.9419 24.6116 19.6543 30.9999 19.6543C37.3777 19.6543 42.5543 24.9419 42.5543 31.4748C42.5543 38.0183 37.3777 43.3164 30.9999 43.3164C24.6222 43.3164 19.435 38.0183 19.435 31.4748ZM30.1921 23.3799C30.1921 22.2823 31.8503 22.2823 31.8503 23.3799V32.0131C31.8503 32.237 31.7607 32.4517 31.6012 32.6101C31.4418 32.7684 31.2255 32.8574 30.9999 32.8574C30.7875 32.8574 30.5836 32.7743 30.4324 32.6262C30.2812 32.478 30.1949 32.2767 30.1921 32.0658V23.3799ZM25.2175 25.9973C25.5247 25.9973 25.8194 25.8761 26.0367 25.6603C26.254 25.4446 26.3761 25.152 26.3761 24.8469C26.3761 24.5418 26.254 24.2492 26.0367 24.0334C25.8194 23.8177 25.5247 23.6965 25.2175 23.6965C24.9307 23.7239 24.6645 23.8563 24.4707 24.0681C24.277 24.2798 24.1697 24.5556 24.1697 24.8416C24.1697 25.1277 24.277 25.4034 24.4707 25.6152C24.6645 25.8269 24.9307 25.9593 25.2175 25.9867V25.9973ZM36.7718 25.9973C37.0791 25.9973 37.3738 25.8761 37.5911 25.6603C37.8083 25.4446 37.9304 25.152 37.9304 24.8469C37.9304 24.5418 37.8083 24.2492 37.5911 24.0334C37.3738 23.8177 37.0791 23.6965 36.7718 23.6965C36.485 23.7239 36.2188 23.8563 36.0251 24.0681C35.8313 24.2798 35.724 24.5556 35.724 24.8416C35.724 25.1277 35.8313 25.4034 36.0251 25.6152C36.2188 25.8269 36.485 25.9593 36.7718 25.9867V25.9973ZM26.3761 38.5882C26.3761 40.1185 24.0588 40.1185 24.0588 38.5882C24.0588 37.0579 26.3761 37.0579 26.3761 38.5882ZM30.9999 42.0288C31.1607 42.0441 31.3229 42.0259 31.4762 41.9754C31.6294 41.9248 31.7703 41.843 31.8899 41.7352C32.0094 41.6273 32.1049 41.4959 32.1703 41.3493C32.2356 41.2026 32.2694 41.044 32.2694 40.8837C32.2694 40.7233 32.2356 40.5648 32.1703 40.4181C32.1049 40.2715 32.0094 40.14 31.8899 40.0322C31.7703 39.9244 31.6294 39.8426 31.4762 39.792C31.3229 39.7414 31.1607 39.7232 30.9999 39.7386C30.7132 39.7659 30.4469 39.8984 30.2532 40.1101C30.0595 40.3219 29.9522 40.5976 29.9522 40.8837C29.9522 41.1697 30.0595 41.4455 30.2532 41.6572C30.4469 41.869 30.7132 42.0014 30.9999 42.0288ZM22.9109 31.6437C22.9263 31.8033 22.908 31.9643 22.857 32.1165C22.8061 32.2687 22.7237 32.4086 22.6151 32.5273C22.5065 32.646 22.3741 32.7408 22.2264 32.8057C22.0788 32.8706 21.919 32.9041 21.7575 32.9041C21.596 32.9041 21.4363 32.8706 21.2886 32.8057C21.141 32.7408 21.0086 32.646 20.9 32.5273C20.7914 32.4086 20.709 32.2687 20.658 32.1165C20.6071 31.9643 20.5888 31.8033 20.6042 31.6437C20.6318 31.3589 20.7652 31.0946 20.9785 30.9023C21.1917 30.7099 21.4695 30.6033 21.7575 30.6033C22.0456 30.6033 22.3234 30.7099 22.5366 30.9023C22.7499 31.0946 22.8833 31.3589 22.9109 31.6437ZM40.237 32.794C40.3978 32.8094 40.56 32.7912 40.7132 32.7406C40.8665 32.6901 41.0074 32.6082 41.127 32.5004C41.2465 32.3926 41.342 32.2611 41.4074 32.1145C41.4727 31.9679 41.5065 31.8093 41.5065 31.6489C41.5065 31.4886 41.4727 31.33 41.4074 31.1834C41.342 31.0367 41.2465 30.9053 41.127 30.7975C41.0074 30.6896 40.8665 30.6078 40.7132 30.5573C40.56 30.5067 40.3978 30.4885 40.237 30.5038C39.9502 30.5312 39.684 30.6637 39.4903 30.8754C39.2966 31.0871 39.1892 31.3629 39.1892 31.6489C39.1892 31.935 39.2966 32.2108 39.4903 32.4225C39.684 32.6342 39.9502 32.7667 40.237 32.794ZM37.9304 38.5987C37.9304 40.1185 35.6132 40.1185 35.6132 38.5882C35.6132 37.0579 37.9304 37.0579 37.9304 38.5882V38.5987Z" fill="white"/>
                 </svg>
@@ -223,11 +226,11 @@
               <button class="example__slider-button"></button>
               <picture>
                 <source media="(min-width: 769px)" srcset="img/fat-cat-desktop@1x.png, img/fat-cat-desktop@2x.png 2x">
-                <img class="example__slider__fat-cat" src="img/fat-cat-mobile@1x.png" srcset="img/fat-cat-mobile@2x.png 2x" alt="Изображение толстого котяры">
+                <img class="example__slider__fat-cat" loading="lazy" src="img/fat-cat-mobile@1x.png" srcset="img/fat-cat-mobile@2x.png 2x" alt="Изображение толстого котяры">
               </picture>
               <picture>
                 <source media="(min-width: 769px)" srcset="img/slim-cat-desktop@1x.png, img/slim-cat-desktop@2x.png 2x">
-                <img class="example__slider__slim-cat" src="img/slim-cat-mobile@1x.png" srcset="img/slim-cat-mobile@2x.png 2x" alt="Изображение худого котика">
+                <img class="example__slider__slim-cat" loading="lazy" src="img/slim-cat-mobile@1x.png" srcset="img/slim-cat-mobile@2x.png 2x" alt="Изображение худого котика">
               </picture>
             </div>
         </div>
@@ -246,24 +249,24 @@
         </div>
         <div class="main-footer__wrapper">
         <a class="main-footer__logo logo" href="#">
-          <img class="main-footer__logo-text" src="img/footer-logo.svg" width="101" height="18" alt="Логотип Cat energy.">
+          <img class="main-footer__logo-text" loading="lazy" src="img/footer-logo.svg" width="101" height="18" alt="Логотип Cat energy.">
         </a>
         <span class="main-footer__underline"></span>
       <div class="main-footer__social social">
         <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-          <svg width="29" height="22">
+          <svg width="29" height="22" loading="lazy">
             <use xlink:href="#vk"></use>
             </svg>
           <span class="visually-hidden">Вконтакте.</span>
         </a>
         <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-          <svg width="29" height="22">
+          <svg width="29" height="22" loading="lazy">
             <use xlink:href="#youtube"></use>
           </svg>
           <span class="visually-hidden">Youtube.</span>
         </a>
         <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-          <svg width="29" height="22">
+          <svg width="29" height="22" loading="lazy">
             <use xlink:href="#telegram"></use>
             </svg>
           <span class="visually-hidden">Телеграм.</span>
@@ -271,9 +274,11 @@
       </div>
       <span class="main-footer__underline"></span>
       <div class="main-footer__copyright copyright">
-        <span class="copyright__text">HTML Academy</span>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="copyright__image" src="img/html-academy.svg" alt="html-academy">
+          <span class="copyright__text">HTML Academy</span>
+          <svg width="27" height="34" loading="lazy">
+            <use xlink:href="#html-academy"></use>
+          </svg>
           <span class="visually-hidden">Ссылка на академию</span>
         </a>
       </div>
