--- a/source/form.html
+++ b/source/form.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
@@ -59,10 +59,10 @@
         <line y1="6" x2="18" y2="6" stroke="black" stroke-width="2"/>
         <path d="M24 6L17.25 11.1962L17.25 0.803848L24 6Z" fill="black"/>
       </symbol>
-      <symbol viewBox="0 0 20 20" id="email" fill="none">
+      <symbol viewBox="0 0 20 20" id="e-mail" fill="none">
         <path d="M1.5 8.5V16.5H18.5V8.5M1.5 3.5H18.5V5.5L10 11.5L1.5 5.5V3.5Z" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
       </symbol>
-      <symbol viewBox="0 0 20 20" id="phone" fill="none">
+      <symbol viewBox="0 0 20 20" id="phone-svg" fill="none">
         <path d="M10 10H18.5M18.5 10L16 7.5M18.5 10L16 12.5M8.5 2.5V7.5H5.5V12.5H8.5V17.5H6C4.5 17.5 3.5 16.5 3.5 15V5C3.5 3.5 4.5 2.5 6 2.5H8.5Z" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
       </symbol>
       <symbol viewBox="0 0 27 34" id="html-academy">
@@ -149,14 +149,14 @@
             <label class="form__name" for="email">E-mail:<sup>*</sup></label>
             <input class="form__field" type="email" id="email" placeholder="E-mail" value="kuklachev@gmail.com" required>
             <svg class="form__icon" width="20" height="20">
-              <use xlink:href="#email"></use>
+              <use xlink:href="#e-mail"></use>
             </svg>
           </li>
           <li class="form__group-item">
             <label class="form__name" for="phone">Телефон:<sup>*</sup></label>
             <input class="form__field" type="tel" id="phone" value="8 (960) 900-60-90"  required>
             <svg class="form__icon" width="20" height="20">
-              <use xlink:href="#phone"></use>
+              <use xlink:href="#phone-svg"></use>
             </svg>
           </li>
           </ul>
@@ -211,19 +211,19 @@
       <span class="main-footer__underline"></span>
     <div class="main-footer__social social">
       <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-        <svg width="29" height="22" loading="lazy">
+        <svg width="29" height="22">
           <use xlink:href="#vk"></use>
           </svg>
         <span class="visually-hidden">Вконтакте.</span>
       </a>
       <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-        <svg width="29" height="22" loading="lazy">
+        <svg width="29" height="22">
           <use xlink:href="#youtube"></use>
         </svg>
         <span class="visually-hidden">Youtube.</span>
       </a>
       <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-        <svg width="29" height="22" loading="lazy">
+        <svg width="29" height="22">
           <use xlink:href="#telegram"></use>
           </svg>
         <span class="visually-hidden">Телеграм.</span>
@@ -233,7 +233,7 @@
     <div class="main-footer__copyright copyright">
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
         <span class="copyright__text">HTML Academy</span>
-        <svg width="27" height="34" loading="lazy">
+        <svg width="27" height="34">
           <use xlink:href="#html-academy"></use>
         </svg>
         <span class="visually-hidden">Ссылка на академию</span>
