--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
@@ -355,7 +355,7 @@
           </li>
         </ul>
         <div class="additional__gift">
-          <svg class="additional__icon" width="78" height="80" viewBox="0 0 78 80" fill="none" xmlns="http://www.w3.org/2000/svg" loading="lazy">
+          <svg class="additional__icon" width="78" height="80" viewBox="0 0 78 80" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M64.0156 34.7127H14.031C12.2766 34.7127 10.8494 33.2951 10.8494 31.5524V22.0842C10.8494 20.3415 12.2766 18.9233 14.031 18.9233H64.0149C65.7687 18.9233 67.1953 20.3415 67.1953 22.0842V31.553C67.1959 33.2951 65.7693 34.7127 64.0156 34.7127ZM14.031 21.3455C13.6276 21.3455 13.2869 21.684 13.2869 22.0842V31.553C13.2869 31.9599 13.6208 32.2912 14.031 32.2912H64.0149C64.4244 32.2912 64.7578 31.9599 64.7578 31.553V22.0842C64.7578 21.6834 64.4171 21.3455 64.0149 21.3455H14.031Z" fill="white"/>
             <path d="M57.0447 67.1488H20.999C17.6218 67.1488 14.8741 64.4191 14.8741 61.0626V33.5016C14.8741 32.8331 15.4201 32.2905 16.0929 32.2905C16.7656 32.2905 17.3116 32.8331 17.3116 33.5016V61.0626C17.3116 63.0833 18.9661 64.7267 20.999 64.7267H57.0447C59.077 64.7267 60.7308 63.0833 60.7308 61.0626V33.5016C60.7308 32.8331 61.2768 32.2905 61.9496 32.2905C62.6223 32.2905 63.1683 32.8331 63.1683 33.5016V61.0626C63.1683 64.4191 60.4213 67.1488 57.0447 67.1488Z" fill="white"/>
             <path d="M39.0225 67.1488C38.3498 67.1488 37.8038 66.6069 37.8038 65.9378V33.5016C37.8038 32.8331 38.3498 32.2905 39.0225 32.2905C39.6953 32.2905 40.2413 32.8331 40.2413 33.5016V65.9372C40.2413 66.6069 39.6959 67.1488 39.0225 67.1488Z" fill="white"/>
@@ -386,19 +386,19 @@
       <span class="main-footer__underline"></span>
     <div class="main-footer__social social">
       <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-        <svg width="29" height="22" loading="lazy">
+        <svg width="29" height="22">
           <use xlink:href="#vk"></use>
           </svg>
         <span class="visually-hidden">Вконтакте.</span>
       </a>
       <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-        <svg width="29" height="22" loading="lazy">
+        <svg width="29" height="22">
           <use xlink:href="#youtube"></use>
         </svg>
         <span class="visually-hidden">Youtube.</span>
       </a>
       <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-        <svg width="29" height="22" loading="lazy">
+        <svg width="29" height="22">
           <use xlink:href="#telegram"></use>
           </svg>
         <span class="visually-hidden">Телеграм.</span>
@@ -408,7 +408,7 @@
     <div class="main-footer__copyright copyright">
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
         <span class="copyright__text">HTML Academy</span>
-        <svg width="27" height="34" loading="lazy">
+        <svg width="27" height="34">
           <use xlink:href="#html-academy"></use>
         </svg>
         <span class="visually-hidden">Ссылка на академию</span>
