--- a/source/form.html
+++ b/source/form.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
+    <link rel="preload" href="/fonts/lato/Lato-Regular.woff2" as="font" type="font/woff2">
+    <link rel="preload" href="/fonts/lato/Lato-Regular.woff" as="font" type="font/woff">
+    <link rel="preload" href="/fonts/oswald/oswaldregular.woff2" as="font" type="font/woff2">
+    <link rel="preload" href="/fonts/oswald/oswaldregular.woff" as="font" type="font/woff">
+    <link rel="preload" href="/fonts/oswald/oswaldmedium.woff2" as="font" type="font/woff2">
+    <link rel="preload" href="/fonts/oswald/oswaldmedium.woff" as="font" type="font/woff">
     <link href="css/style.css" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -69,13 +75,13 @@
         <path d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z" fill="#666666"/>
       </symbol>
     </svg>
-    <header class="main-header main-header__form">
+    <header class="main-header main-header--form">
       <div class="main-header__logo">
-        <a class="main-header__logo-image" href="index.html">
+        <a class="main-header__logo-link" href="index.html">
           <picture>
             <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg" >
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" >
-            <img class="header__logo-image" src="img/logo-mobile.svg" alt="Cat Energy.">
+            <img class="main-header__logo-image" src="img/logo-mobile.svg" alt="Cat Energy.">
           </picture>
         </a>
       <a class="main-header__logo-text" href="index.html">
@@ -85,8 +91,8 @@
       </a>
       <span class="main-header__button-cover"></span>
     </div>
-          <nav class="main-nav site-list main-nav--closed main-nav--nojs">
-            <button class="main-nav__toggle main-nav--closed" type="button">
+          <nav class="main-nav site-list main-nav--nojs">
+            <button class="main-nav__toggle" type="button">
               <span class="visually-hidden">Открыть меню</span>
             </button>
                 <a class="site-list__link " href="index.html">
@@ -100,12 +106,12 @@
                 </a>
           </nav>
     </header>
-    <main class="main-container main-container__form">
+    <main class="main-container">
       <section class="selection">
-        <h1 class="selection_title">
+        <h1 class="selection__title">
           Подбор программы
         </h1>
-        <p class="section_description">Заполните анкету, и мы подберем
+        <p class="selection__description">Заполните анкету, и мы подберем
           программу питания для вашего кота</p>
           <form class="selection__form form" method="get">
             <div class="form__wrapper">
@@ -143,7 +149,7 @@
           </fieldset>
             </div>
           <fieldset class="form__group">
-            <h2 class="form__title title-line--width"> Контактные данные (владельца кота)</h2>
+            <h2 class="form__title"> Контактные данные (владельца кота)</h2>
             <ul class="form__group-list contact-details">
               <li class="form__group-item">
             <label class="form__name" for="email">E-mail:<sup>*</sup></label>
@@ -186,7 +192,7 @@
               </li>
             </ul>
           </fieldset>
-          <div class="form-button__wrapper">
+          <div class="form__button-wrapper">
             <button class="form__button button button--primary" type="submit">Отправить заявку</button>
             <small class="form__text-small"><sup>*</sup> — Обязательные поля</small>
           </div>
@@ -198,7 +204,7 @@
         <div class="contacts__text">
         <b class="contacts__title">Приглашаем <br> к сотрудничеству дилеров!</b>
         <p class="contacts__address">ул. Большая
-          Конюшенная, д. 19/8 <span class="contacts__address--space"></span>
+          Конюшенная, д. 19/8 <span class="contacts__address-space"></span>
           Санкт-Петербург</p>
         </div>
         <iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036257198202!2d30.32047247735734!3d59.938719162093534!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1682684814412!5m2!1sru!2sru" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
@@ -241,6 +247,5 @@
     </div>
   </div>
   </footer>
-    <script src="./js/script.js"></script>
   </body>
 </html>
