--- a/source/catalog.html
+++ b/source/catalog.html
@@ -167,7 +167,7 @@
             <picture>
               <source media="(min-width: 1440px)" srcset="img/catalog-3-desktop.png 1x, img/catalog-3-desktop@2x.png 2x">
               <source media="(min-width: 768px)" srcset="img/catalog-3-tablet@1x.png 1x, img/catalog-3-tablet@2x.png 2x">
-              <img class="card__image-500 card__image-500--micro" src="img/catalog-3-mobile@1x.png" srcset="img/catalog-3-mobile@2x.png 2x" alt="Cat Energy с Рыбой.">
+              <img class="card__image-500 card__image-500--mini" src="img/catalog-3-mobile@1x.png" srcset="img/catalog-3-mobile@2x.png 2x" alt="Cat Energy с Рыбой.">
             </picture>
         </div>
           <div class="card__text">
@@ -225,7 +225,7 @@
             <picture>
               <source media="(min-width: 1440px)" srcset="img/catalog-5-desktop.png 1x, img/catalog-5-desktop@2x.png 2x">
               <source media="(min-width: 768px)" srcset="img/catalog-5-tablet@1x.png 1x, img/catalog-5-tablet@2x.png 2x">
-              <img class="card__image-500 card__image-500--micro" src="img/catalog-5-mobile@1x.png" srcset="img/catalog-5-mobile@2x.png 2x" alt="Cat Energy с Гречкой.">
+              <img class="card__image-500 card__image-500--mini" src="img/catalog-5-mobile@1x.png" srcset="img/catalog-5-mobile@2x.png 2x" alt="Cat Energy с Гречкой.">
             </picture>
         </div>
           <div class="card__text">
